normalement c'est la fin

--- a/philo_bonus/Makefile
+++ b/philo_bonus/Makefile
@@ -6,7 +6,7 @@
 #    By: madamou <madamou@contact.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/06/17 12:57:50 by madamou           #+#    #+#              #
-#    Updated: 2024/07/10 05:33:30 by madamou          ###   ########.fr        #
+#    Updated: 2024/07/13 06:06:48 by madamou          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -16,9 +16,11 @@ C_FLAGS = -Wall -Wextra -Werror
 
 SRCS_DIR = srcs/
 
-PARSING = $(addprefix parsing/, parsing_args_bonus.c parsing_utils_bonus.c init_struct_bonus.c)
+PARSING = $(addprefix parsing/, parsing_args_bonus.c parsing_utils_bonus.c \
+				init_struct_bonus.c)
 
-PROCESS = $(addprefix process/, process_bonus.c routine_bonus.c process_utils_bonus.c routine2_bonus.c semaphores_bonus.c)
+PROCESS = $(addprefix process/, process_bonus.c routine_bonus.c process_utils_bonus.c \
+				routine2_bonus.c semaphores_bonus.c checker.c)
 
 UTILS = $(addprefix utils/, utils_bonus.c ft_itoa_bonus.c)
 
